// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StartGame /> does not render board when no snapshot 1`] = `
<ForwardRef(Box)>
  <ForwardRef(Typography)
    align="center"
    gutterBottom={true}
    variant="h3"
  >
    gameName
  </ForwardRef(Typography)>
  <ForwardRef(Typography)
    align="center"
    color="textSecondary"
    variant="body1"
  >
    Invite others to game:
  </ForwardRef(Typography)>
  <ForwardRef(Typography)
    align="center"
    color="textSecondary"
    gutterBottom={true}
    variant="body2"
  >
    http://localhost//join
     
    <CopyToClipboard
      copyText="http://localhost//join"
    />
  </ForwardRef(Typography)>
  <ForwardRef(Grid)
    container={true}
    justifyContent="center"
    spacing={3}
  >
    <ForwardRef(Grid)
      item={true}
      md={5}
    >
      <PlayerList />
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</ForwardRef(Box)>
`;

exports[`<StartGame /> renders game boards when snapshot is present 1`] = `
<ForwardRef(Box)>
  <ForwardRef(Typography)
    align="center"
    gutterBottom={true}
    variant="h3"
  >
    gameName
  </ForwardRef(Typography)>
  <ForwardRef(Typography)
    align="center"
    color="textSecondary"
    variant="body1"
  >
    Invite others to game:
  </ForwardRef(Typography)>
  <ForwardRef(Typography)
    align="center"
    color="textSecondary"
    gutterBottom={true}
    variant="body2"
  >
    http://localhost//join
     
    <CopyToClipboard
      copyText="http://localhost//join"
    />
  </ForwardRef(Typography)>
  <ForwardRef(Grid)
    container={true}
    justifyContent="center"
    spacing={3}
  >
    <ForwardRef(Grid)
      item={true}
      md={5}
    >
      <PlayerList />
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
    >
      <ForwardRef(Box)
        display="flex"
        flexDirection="column"
      >
        <ForwardRef(Typography)
          align="center"
          gutterBottom={true}
          variant="body1"
        >
          Here are the boards from that round:
        </ForwardRef(Typography)>
        <OpponentBoardPreview
          includeCurrentPlayer={true}
          initialPlayerIndex={0}
          players={
            Array [
              Object {
                "board": Array [
                  Array [
                    null,
                  ],
                ],
                "gamesWon": 0,
                "hand": Array [],
                "isAdmin": false,
                "isReady": false,
                "isTopBanana": true,
                "userId": "123",
                "username": "username",
              },
            ]
          }
        />
      </ForwardRef(Box)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</ForwardRef(Box)>
`;
